# Generated by Django 5.2.16 on 2026-08-01 05:45

import apps.registros.models
import django.db.models.deletion
import django.utils.timezone
from django.conf import settings
from django.db import migrations, models


class Migration(migrations.Migration):

    initial = True

    dependencies = [
        ('auth', '0012_alter_user_first_name_max_length'),
    ]

    operations = [
        migrations.CreateModel(
            name='Persona',
            fields=[
                ('id', models.BigAutoField(auto_created=True, primary_key=True, serialize=False, verbose_name='ID')),
                ('password', models.CharField(max_length=128, verbose_name='password')),
                ('last_login', models.DateTimeField(blank=True, null=True, verbose_name='last login')),
                ('is_superuser', models.BooleanField(default=False, help_text='Designates that this user has all permissions without explicitly assigning them.', verbose_name='superuser status')),
                ('correo', models.EmailField(max_length=254, unique=True)),
                ('nombre_completo', models.CharField(max_length=180)),
                ('telefono', models.CharField(blank=True, max_length=20)),
                ('estado', models.CharField(choices=[('activa', 'Activa'), ('inactiva', 'Inactiva')], default='activa', max_length=10)),
                ('fecha_registro', models.DateTimeField(default=django.utils.timezone.now)),
                ('ultimo_acceso', models.DateTimeField(blank=True, null=True)),
                ('is_staff', models.BooleanField(default=False)),
                ('is_active', models.BooleanField(default=True)),
                ('groups', models.ManyToManyField(blank=True, help_text='The groups this user belongs to. A user will get all permissions granted to each of their groups.', related_name='user_set', related_query_name='user', to='auth.group', verbose_name='groups')),
                ('user_permissions', models.ManyToManyField(blank=True, help_text='Specific permissions for this user.', related_name='user_set', related_query_name='user', to='auth.permission', verbose_name='user permissions')),
            ],
            options={
                'verbose_name': 'persona',
                'verbose_name_plural': 'personas',
            },
            managers=[
                ('objects', apps.registros.models.PersonaManager()),
            ],
        ),
        migrations.CreateModel(
            name='SesionOTP',
            fields=[
                ('id', models.BigAutoField(auto_created=True, primary_key=True, serialize=False, verbose_name='ID')),
                ('codigo_hash', models.CharField(max_length=128)),
                ('canal', models.CharField(choices=[('correo', 'Correo electrónico')], default='correo', max_length=10)),
                ('creado_en', models.DateTimeField(auto_now_add=True)),
                ('expira_en', models.DateTimeField()),
                ('usado', models.BooleanField(default=False)),
                ('intentos', models.PositiveSmallIntegerField(default=0)),
                ('persona', models.ForeignKey(on_delete=django.db.models.deletion.CASCADE, related_name='sesiones_otp', to=settings.AUTH_USER_MODEL)),
            ],
            options={
                'verbose_name': 'sesión OTP',
                'verbose_name_plural': 'sesiones OTP',
                'ordering': ['-creado_en'],
            },
        ),
        migrations.CreateModel(
            name='RolPermiso',
            fields=[
                ('id', models.BigAutoField(auto_created=True, primary_key=True, serialize=False, verbose_name='ID')),
                ('modulo', models.CharField(choices=[('EVT', 'Actividades FILEY (Eventos)'), ('TAL', 'Actividades Infantiles/Juveniles'), ('STD', 'Stands'), ('VIS', 'Visitas Escolares'), ('*', 'Todos los módulos (administrador general)')], max_length=3)),
                ('nivel', models.CharField(choices=[('lectura', 'Solo lectura'), ('edicion', 'Edición')], default='edicion', max_length=10)),
                ('creado_en', models.DateTimeField(auto_now_add=True)),
                ('persona', models.ForeignKey(on_delete=django.db.models.deletion.CASCADE, related_name='roles', to=settings.AUTH_USER_MODEL)),
            ],
            options={
                'verbose_name': 'rol/permiso',
                'verbose_name_plural': 'roles/permisos',
                'constraints': [models.UniqueConstraint(fields=('persona', 'modulo'), name='unico_permiso_por_modulo')],
            },
        ),
    ]
