erDiagram
    Persona {
        bigint id PK
        string nombre
        string primer_apellido
        string segundo_apellido
        string correo
        string celular
        string pais
        string estado_pais
        string ciudad
    }

    CatalogoConvocatorias {
        bigint id PK
        string nombre_convocatoria
        string prefijo
        date fecha_apertura
        date fecha_cierre
        boolean esta_activa
    }

    DetallesConvocatoria {
        bigint id PK
        bigint convocatoria_id FK
    }

    RouterSolicitudes {
        bigint id PK
        bigint usuario_django FK
        bigint convocatoria_id FK "DISCRIMINADOR"
        bigint solicitud_id FK "REFERENCIA POLIMORFICA"
    }

    Solicitudes_EVT {
        bigint id PK
        string institucion
        string cargo
        string titulo_actividad
        string nombre_moderador
        string nombre_organizador_organizacion
        string publico_objetivo
        string sinopsis
        boolean es_uady
        boolean requiere_constancia
        string comentarios
        timestamp fecha_de_solicitud
    }

    CatalogoActividades {
        bigint id PK
        string nombre
    }

    RouterActividades {
        bigint id PK
        bigint solicitud_id FK
        bigint tipo_actividad_id FK "DISCRIMINADOR"
        bigint detalle_id FK "REFERENCIA POLIMORFICA"
    }

    RouterDocumentos {
        bigint id PK
        bigint tipo_actividad_id FK "DISCRIMINADOR"
        bigint detalle_id FK "REFERENCIA POLIMORFICA"
        string tipo_documento
        string storage_key
    }

    Actividad_Conversatorio {
        bigint id PK
        string nombre_participante_1
        string semblanza_participante_1
        string nombre_participante_2
        string semblanza_participante_2
        string nombre_participante_3
        string semblanza_participante_3
    }

    Actividad_Conferencia {
        bigint id PK
        string nombre_participante_1
        string semblanza_participante_1
        string nombre_participante_2
        string semblanza_participante_2
    }

    Actividad_Charla {
        bigint id PK
        string nombre_participante_1
        string semblanza_participante_1
        string nombre_participante_2
        string semblanza_participante_2
    }

    Actividad_MesaRedonda {
        bigint id PK
        string nombre_participante_1
        string semblanza_participante_1
        string nombre_participante_2
        string semblanza_participante_2
        string nombre_participante_3
        string semblanza_participante_3
    }

    Actividad_PresentacionLibro {
        bigint id PK
        string titulo_publicacion
        string tipo_presentador
        string nombre_autor_1
        string semblanza_autor_1
        boolean autor_1_participa
        string nombre_autor_2
        string semblanza_autor_2
        boolean autor_2_participa
        string nombre_autor_3
        string semblanza_autor_3
        boolean autor_3_participa
        string nombre_autor_4
        string semblanza_autor_4
        boolean autor_4_participa
        string nombre_autor_5
        string semblanza_autor_5
        boolean autor_5_participa
        string nombre_participante_1
        string semblanza_participante_1
        string nombre_participante_2
        string semblanza_participante_2
        string nombre_editorial
    }

    Actividad_PresentacionRevista {
        bigint id PK
        string titulo_publicacion
        string tipo_presentador
        string nombre_editor_1
        string semblanza_editor_1
        boolean editor_1_participa
        string nombre_editor_2
        string semblanza_editor_2
        boolean editor_2_participa
        string nombre_participante_1
        string semblanza_participante_1
        string nombre_participante_2
        string semblanza_participante_2
        string nombre_editorial
    }

    Actividad_LecturaObra {
        bigint id PK
        string nombre_participante_1
        string semblanza_participante_1
        string nombre_participante_2
        string semblanza_participante_2
    }

    Actividad_Encuentro {
        bigint id PK
        string nombre_participante_1
        string semblanza_participante_1
        string nombre_participante_2
        string semblanza_participante_2
    }


    Persona ||--o{ RouterSolicitudes : "tiene"
    CatalogoConvocatorias ||--o{ RouterSolicitudes : "clasifica"
    CatalogoConvocatorias ||--|| DetallesConvocatoria : "detalla"

    RouterSolicitudes }o--|| Solicitudes_EVT : "enruta"

    Solicitudes_EVT ||--o{ RouterActividades : "contiene"

    CatalogoActividades ||--o{ RouterActividades : "clasifica"
    CatalogoActividades ||--o{ RouterDocumentos : "clasifica"

    RouterActividades }o..|| Actividad_Conversatorio : "enruta"
    RouterActividades }o..|| Actividad_Conferencia : "enruta"
    RouterActividades }o..|| Actividad_Charla : "enruta"
    RouterActividades }o..|| Actividad_MesaRedonda : "enruta"
    RouterActividades }o..|| Actividad_PresentacionLibro : "enruta"
    RouterActividades }o..|| Actividad_PresentacionRevista : "enruta"
    RouterActividades }o..|| Actividad_LecturaObra : "enruta"
    RouterActividades }o..|| Actividad_Encuentro : "enruta"

    RouterDocumentos }o..|| Actividad_PresentacionLibro : "adjunta"
    RouterDocumentos }o..|| Actividad_PresentacionRevista : "adjunta"
